the nav overflow issues sha, but i have solved it again 😑

--- a/index.scss
+++ b/index.scss
@@ -120,7 +120,7 @@ body {
           position: absolute;
           width: 100%;
           right: 0;
-          top: -900%;
+          top: -100vh;
 
           padding: 10rem 1rem 5rem;
 
